First buildable subset using JPMS!
Missing: tests, todos, presentation