@@ -15,7 +15,7 @@
 
 
 	<properties>
-		<roaster.version>2.20.9-SNAPSHOT</roaster.version>
+		<roaster.version>2.20.7.Final</roaster.version>
 	</properties>
 
 	<build>
@@ -26,7 +26,12 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<compilerArgument>-proc:none</compilerArgument>
+							<compilerArgs>
+            <arg>--add-reads</arg>
+            <arg>org.jrebirth.af.processor=ALL-UNNAMED</arg>
+          </compilerArgs>
 				</configuration>
+
 			</plugin>
 
 			<plugin>
@@ -54,7 +59,7 @@
 
 	<dependencies>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.jboss.forge.roaster</groupId>
 			<artifactId>roaster-api</artifactId>
 			<version>${roaster.version}</version>
@@ -64,21 +69,14 @@
 			<groupId>org.jboss.forge.roaster</groupId>
 			<artifactId>roaster-jdt</artifactId>
 			<version>${roaster.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.eclipse.jdt</groupId>
-					<artifactId>org.eclipse.jdt.core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>api</artifactId>
 			<version>11.0.0-SNAPSHOT</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
